feat(list): creating view controller for list

--- a/DopeSquad/DopeSquad/Info.plist
+++ b/DopeSquad/DopeSquad/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>PUBLIC_KEY</key>
 	<string>778a229f3983f75f191d735a52a4ebd6</string>
 	<key>PRIVATE_KEY</key>
